--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "code": "1.x.x",
     "eslint": "1.x.x",
+    "eslint-plugin-hapi": "1.x.x",
     "lab": "5.x.x"
   },
   "keywords": [
