migrate to Node >= 4 and ES6. Closes #41

--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   "license": "MIT",
   "scripts": {
     "lint": "belly-button -I 'node_modules/**' -I  'test/fixtures/**'",
-    "test": "npm run lint && lab -T test/transformer.js -v -t 100 -a code"
+    "test": "npm run lint && lab -v -t 100 -a code"
+  },
+  "engines": {
+    "node": ">=4.0.0"
   },
   "peerDependencies": {
     "eslint-plugin-hapi": "4.x.x"
