--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@hapi/eslint-config",
+  "name": "@hapi/eslint-config-hapi",
   "version": "12.0.0",
   "description": "Shareable ESLint config for the hapi ecosystem",
   "main": "lib/index.js",
-  "repository": "https://github.com/hapijs/eslint-config.git",
+  "repository": "https://github.com/hapijs/eslint-config-hapi.git",
   "keywords": ["hapi", "lint", "eslint", "eslintconfig"],
   "dependencies": {
   },
