--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "@hapi/eslint-config-hapi",
-  "version": "12.0.0",
+  "version": "12.1.0",
   "description": "Shareable ESLint config for the hapi ecosystem",
   "main": "lib/index.js",
   "repository": "https://github.com/hapijs/eslint-config-hapi.git",
-  "keywords": ["hapi", "lint", "eslint", "eslintconfig"],
-  "dependencies": {
-  },
+  "keywords": [
+    "hapi",
+    "lint",
+    "eslint",
+    "eslintconfig"
+  ],
+  "dependencies": {},
   "peerDependencies": {
     "@hapi/eslint-plugin-hapi": "4.x.x"
   },
