--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Shareable ESLint config for the hapi ecosystem",
   "main": "lib/index.js",
   "repository": "https://github.com/hapijs/eslint-config-hapi.git",
+  "files": [
+    "lib"
+  ],
   "keywords": [
     "hapi",
     "lint",
@@ -15,7 +18,7 @@
     "@hapi/eslint-plugin-hapi": "4.x.x"
   },
   "devDependencies": {
-    "@hapi/code": "7.x.x",
+    "@hapi/code": "8.x.x",
     "@hapi/eslint-plugin-hapi": "4.x.x",
     "@hapi/lab": "22.x.x",
     "eslint": "6.x.x"
